Fix sonar code smell warning